Added dependency, error fixed:
 * added Spring JPA to project
 * fixed error while test running on JDK9