@@ -11,7 +11,6 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -23,8 +22,27 @@ repositories {
     mavenCentral()
 }
 
+//compileJava {
+//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
+//}
+//
+//compileTestJava {
+//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
+//}
+
+/**
+ * java.xml.bind issue with JDK9 <a href="https://stackoverflow.com/a/43574427">see for details.</a>
+ * <code>
+ *     Caused by: java.lang.ClassNotFoundException: javax.xml.bind.JAXBException
+ * </code>
+ */
+test {
+    jvmArgs += ['--add-modules',  'java.xml.bind']
+}
+
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
     compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile('org.springframework.boot:spring-boot-starter-web')
